<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.setimaapp.MainActivity">

    <LinearLayout
        android:id="@+id/Nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:text="@string/nombre" />

        <EditText
            android:id="@+id/NombreEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="150" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Apellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:text="@string/apellidos" />

        <EditText
            android:id="@+id/ApellidosEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="150" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:text="@string/email" />

        <EditText
            android:id="@+id/EmailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:maxLength="150" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/Mensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:text="@string/mensaje" />

        <EditText
            android:id="@+id/MensajeEdit"
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:maxLength="150" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/Check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/Cautoborrado"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/subemail"
            android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>

    <LinearLayout
        android:id="@+id/links"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView122"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:text="@string/elpais"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/loremipsum" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.05"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmar" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar" />
    </LinearLayout>
</LinearLayout>
